--- a/VER2/README
+++ b/VER2/README
@@ -1,1 +1,19 @@
-THIS IS A README FILE
+README -- VER2: Second primitive version of a 'world builder' python programme.
+
+The following files exist:
+
+host.py --> SERVER/HOST for python sockets.
+main.py --> PRINCIPAL PLACEHOLDER, this file simulates a real car driving and sending sensor data on self-state and cone positions.
+main2.py --> WORLD BUILDER, reconstructs the state and environment of the car from 'sensor data' sent through the network from main.py.
+network.py --> NETWORK/SOCKET settings.
+simulation.py --> CLASSES AND FUNCTION DEFINITIONS for car, cones and data handling.
+
+
+###########
+## LOGIC ##
+###########
+
+main.py [data: speed,angle, cone_R, cone_THETA, cone_COLOUR] ==>> host.py
+host.py ==>> main2.py
+main2.py [(speed,angle -> vel_x,vel_y), (cone_data -> cone_pos)]
+
