--- a/VER2/README
+++ b/VER2/README
@@ -17,3 +17,6 @@ main.py [data: speed,angle, cone_R, cone_THETA, cone_COLOUR] ==>> host.py
 host.py ==>> main2.py
 main2.py [(speed,angle -> vel_x,vel_y), (cone_data -> cone_pos)]
 
+
+USEFUL REFERENCE VIDEO: https://www.youtube.com/watch?v=McoDjOCb2Zo&t=2639s   (tech with tim, online multiplayer pygame development)
+
