--- a/changelog.txt
+++ b/changelog.txt
@@ -26,16 +26,19 @@ changed the way drawCar() works (again) to be a little more legible (now uses _d
 pressing 'h' now toggles the (useless) headlights AND carPolygonMode, so that's nice
 added mouse-position-based zooming (instead of center-of-screen zooming), to make using a trackpad a little easier (when you can't press on the scrollwheel to drag)
 you can now press 'z' to switch between zooming modes (default is mouse-position-zooming)
+moved 'timeSinceLastUpdate' into the Map.Car class, under the name: 'Car.lastUpdateTimestamp'
+removed 'clockSet()' from Map class (it was not used anywhere (and it's a funky hack anyway))
+add/update function comments (""" """) to all changes
+changed the way drawMouseCone() works again (i realized you don't need a sub-function if you're usually passing the same thing)
 
 next up:
-a (better?) warning when SLAM refuses to work (too much correction)
-make parameters and maps for big car (wheelbase, max lidar range, rules-compliant cone-connection stuff, the whole thing!)
-add/update function comments (""" """) to all changes
+measure chassis size and make a fun new carSprite
+extra support for bigger (finish?) and orange cones ? (at least drawing, i dont know about other stuff...)
+delaunay triangulation testing (make a basic implementation and draw it, then we'll figure out what to do with it later)
 make simulatedVision (bad positions, good color data) to help simulatedLidar do its thing
 make use of the (now available) vision data in DIY_SLAM
-update target positions if cone positions change(?)
+update target positions if cone positions change
 basic DSP (filtering) on the steering?? idk man, it seems like there is a lot of predictable oscillation, maybe DSP will help (or not, if freq is too low)
-delaunay triangulation testing (make a basic implementation and draw it, then we'll figure out what to do with it later)
 button for toggling spline dots
 3d render engine undiscovered cones and splines and all that (just more stuff in general?)
 more efficient 3d rendering? (numpy/numba?)
