--- a/changelog.txt
+++ b/changelog.txt
@@ -34,13 +34,16 @@ BIG CHANGE: the cone lists are now in a dict called cone_lists, mapped to False 
 fixed bug in simulatedLidar (and changed some stuff around), so lidarOffsets now work, AND you can turn off positionalDrift if you want.
 added yet another drawConeSlamData mode, which just doesn't display how often the cone is seen (so you can actually see how well the lidar center pos is calculated)
 BIG ADDITION: HWserialConn, HWserialLogging, realCar and realLidar all added (see also: plethora of arduino code that makes it work)
+fixed high zoom FPS issues by (limiting zoom, and) ensuring the car (which takes very long to render when zoomed in a lot) is only rendered when actually in frame (allow me to inspect lidardata at my leasure)
+added simulatedVision (bad positions, good color data) to help simulatedLidar do its thing
+make use of the (now available) vision data in DIY_SLAM (note: preliminary! simulatedVision is pretty simple, i suspect the real camera will have a little more nuance)
 
 next up:
+allow camera tilt (oh god, rendering math...)
+another round of function labels """""" couldn't hurt
+update target positions if cone positions change
 extra support for bigger (finish?) and orange cones ? (at least drawing, i dont know about other stuff...)
 delaunay triangulation testing (make a basic implementation and draw it, then we'll figure out what to do with it later)
-make simulatedVision (bad positions, good color data) to help simulatedLidar do its thing
-make use of the (now available) vision data in DIY_SLAM
-update target positions if cone positions change
 make a fun new carSprite
 basic DSP (filtering) on the steering?? idk man, it seems like there is a lot of predictable oscillation, maybe DSP will help (or not, if freq is too low)
 button for toggling spline dots
