--- a/changelog.txt
+++ b/changelog.txt
@@ -37,6 +37,7 @@ BIG ADDITION: HWserialConn, HWserialLogging, realCar and realLidar all added (se
 fixed high zoom FPS issues by (limiting zoom, and) ensuring the car (which takes very long to render when zoomed in a lot) is only rendered when actually in frame (allow me to inspect lidardata at my leasure)
 added simulatedVision (bad positions, good color data) to help simulatedLidar do its thing
 make use of the (now available) vision data in DIY_SLAM (note: preliminary! simulatedVision is pretty simple, i suspect the real camera will have a little more nuance)
+realLidar ready to test
 
 next up:
 allow camera tilt (oh god, rendering math...)
