Spline generation works for at least two visible midpoints

--- a/control/test.ipynb
+++ b/control/test.ipynb
@@ -6,9 +6,11 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
     "from Faster_Delaunay import delauney_boundary, separating\n",
-    "from path_finding import path_finding"
+    "from path_finding import path_finding\n",
+    "from splines import generate_spline"
    ],
    "metadata": {
     "collapsed": false,
@@ -22,8 +24,8 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "example = [{\"Label\": \"Yellow\", \"Zpos\": 2, \"Ypos\": 0, \"Xpos\": 0, \"Time\": 1},\n",
-    "           {\"Label\": \"Blue\", \"Zpos\": 2, \"Ypos\": 0, \"Xpos\": 1, \"Time\": 1},\n",
+    "example = [{\"Label\": \"Yellow\", \"Zpos\": 2, \"Ypos\": 1, \"Xpos\": 0, \"Time\": 1},\n",
+    "           {\"Label\": \"Blue\", \"Zpos\": 2, \"Ypos\": 1, \"Xpos\": 1, \"Time\": 1},\n",
     "           {\"Label\": \"Yellow\", \"Zpos\": 2, \"Ypos\": 1, \"Xpos\": 0, \"Time\": 1},\n",
     "           {\"Label\": \"Blue\", \"Zpos\": 2, \"Ypos\": 1, \"Xpos\": 1, \"Time\": 1},\n",
     "           {\"Label\": \"Yellow\", \"Zpos\": 2, \"Ypos\": 2, \"Xpos\": 0, \"Time\": 1},\n",
@@ -66,6 +68,29 @@
    ],
    "source": [
     "midpoints"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<scipy.interpolate.interpolate.interp1d at 0x7fc8c1f0d3f0>"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_spline(midpoints)"
    ],
    "metadata": {
     "collapsed": false,
