Documented function generate_increment_on_path

--- a/control/test.ipynb
+++ b/control/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "example = [{\"Label\": \"Yellow\", \"Zpos\": 2, \"Ypos\": 1, \"Xpos\": 0, \"Time\": 1},\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "triangles, cones = delauney_boundary(example)\n",
@@ -55,19 +55,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[0.5, 0. ],\n       [0.5, 0.5],\n       [0.5, 1. ],\n       [0.5, 1.5],\n       [0.5, 2. ]])"
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "midpoints"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "generate_spline(midpoints)"
    ],
    "metadata": {
     "collapsed": false,
