Some functionality for orange cones in control and bug fixes in delaunay and path_finding

--- a/control/test.ipynb
+++ b/control/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
@@ -11,7 +11,8 @@
     "from Faster_Delaunay import delauney_boundary\n",
     "from path_finding import path_finding\n",
     "from splines import generate_increment_on_path\n",
-    "from control import control"
+    "# from control import control\n",
+    "from typing import List"
    ],
    "metadata": {
     "collapsed": false,
@@ -22,16 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "outputs": [],
    "source": [
     "example = [{\"Label\": \"Yellow\", \"Zpos\": None, \"Ypos\": 1.66, \"Xpos\": -1.16, \"Time\": None},  # A\n",
     "           {\"Label\": \"Blue\", \"Zpos\": None, \"Ypos\": 1, \"Xpos\": 1, \"Time\": None},  # B\n",
-    "           {\"Label\": \"Yellow\", \"Zpos\": None, \"Ypos\": 3.2, \"Xpos\": -0.14, \"Time\": None}]  # C\n",
-    "           # {\"Label\": \"Blue\", \"Zpos\": None, \"Ypos\": 2.68, \"Xpos\": 1.64, \"Time\": None},  # D\n",
-    "           # {\"Label\": \"Yellow\", \"Zpos\": None, \"Ypos\": 4.62, \"Xpos\": 1.26, \"Time\": None},  # E\n",
-    "           # {\"Label\": \"Blue\", \"Zpos\": None, \"Ypos\": 3.42, \"Xpos\": 2.88, \"Time\": None},  # F\n",
-    "           # {\"Label\": \"Yellow\", \"Zpos\": None, \"Ypos\": 4.98, \"Xpos\": 3.16, \"Time\": None}]  # G"
+    "           {\"Label\": \"Orange\", \"Zpos\": None, \"Ypos\": 3.2, \"Xpos\": -0.14, \"Time\": None},  # C\n",
+    "           {\"Label\": \"Orange\", \"Zpos\": None, \"Ypos\": 2.68, \"Xpos\": 1.64, \"Time\": None},  # D\n",
+    "           {\"Label\": \"Orange\", \"Zpos\": None, \"Ypos\": 4.62, \"Xpos\": 1.26, \"Time\": None},  # E\n",
+    "           {\"Label\": \"Orange\", \"Zpos\": None, \"Ypos\": 3.42, \"Xpos\": 2.88, \"Time\": None},  # F\n",
+    "           {\"Label\": \"Yellow\", \"Zpos\": None, \"Ypos\": 4.98, \"Xpos\": 3.16, \"Time\": None}]  # G"
    ],
    "metadata": {
     "collapsed": false,
@@ -42,12 +43,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "outputs": [],
    "source": [
-    "triangles, cones = delauney_boundary(example)\n",
-    "midpoints = path_finding(triangles, cones)\n",
-    "next_point = generate_increment_on_path(midpoints)\n",
+    "def control(cones: List[dict]):\n",
+    "    oranges = []\n",
+    "    j = 0\n",
+    "    for i in range(len(cones)):\n",
+    "        cone = cones[i - j]\n",
+    "        if cone[\"Label\"] == \"Orange\":\n",
+    "            del cones[i - j]\n",
+    "            oranges.append([cone[\"Xpos\"], cone[\"Ypos\"]])\n",
+    "            j += 1\n",
+    "\n",
+    "    if len(oranges) == 2:\n",
+    "        print(np.array(oranges).shape)\n",
+    "        print(np.average(oranges, axis=0))\n",
+    "\n",
+    "    print(cones)\n",
+    "    triangles, cones = delauney_boundary(cones)\n",
+    "    midpoints = path_finding(triangles, cones)\n",
+    "    target_point = generate_increment_on_path(midpoints)\n",
+    "    theta = np.arctan(target_point[0] / target_point[1])\n",
+    "\n",
+    "    return theta"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 2)\n",
+      "[1.41 3.48]\n",
+      "[{'Label': 'Yellow', 'Zpos': None, 'Ypos': 1.66, 'Xpos': -1.16, 'Time': None}, {'Label': 'Blue', 'Zpos': None, 'Ypos': 1, 'Xpos': 1, 'Time': None}, {'Label': 'Yellow', 'Zpos': None, 'Ypos': 4.98, 'Xpos': 3.16, 'Time': None}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# triangles, cones = delauney_boundary(example)\n",
+    "# midpoints = path_finding(triangles, cones)\n",
+    "# next_point = generate_increment_on_path(midpoints)\n",
     "theta = control(example)"
    ],
    "metadata": {
@@ -73,9 +118,7 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "generate_spline(midpoints)"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
